// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`data-driven header codec > a spec-defined name aegis cannot emit is refused as such even when its value is empty 1`] = `
{
  "code": "header_not_emittable",
  "data": {
    "parameter": "zip",
  },
  "debug": {},
  "message": "Header parameter "zip" is defined by a specification, and aegis does not implement it, so it cannot be emitted",
  "name": "AegisDomainError",
}
`;

exports[`data-driven header codec > an unknown name is refused at the domain crossing without pointing to a custom bag 1`] = `
{
  "code": "header_unknown_parameter",
  "data": {
    "parameter": "x-lindorm-hint",
  },
  "debug": {},
  "message": "Header parameter "x-lindorm-hint" is not a header parameter aegis writes",
  "name": "AegisDomainError",
}
`;

exports[`data-driven header codec > compression is refused at the domain crossing as a parameter aegis cannot emit 1`] = `
{
  "code": "header_not_emittable",
  "data": {
    "parameter": "zip",
  },
  "debug": {},
  "message": "Header parameter "zip" is defined by a specification, and aegis does not implement it, so it cannot be emitted",
  "name": "AegisDomainError",
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is a string is reported verbatim, base64url or not 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
  "initialisationVector": "AAAAAAAAAAAAAAAA",
  "pbkdfSalt": "",
  "publicEncryptionTag": "!!!",
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is an array reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is an object reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is false reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is null reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is the number 0 reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is the number 5 reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;

exports[`parseTokenHeader > the members it reports > a byte parameter that is true reports no member 1`] = `
{
  "algorithm": "A256GCMKW",
  "critical": [],
}
`;
